--- a/style.css
+++ b/style.css
@@ -1,15 +1,38 @@
 /* Fontes */
 @font-face {
-  font-family: saintcarell;
-  src: url(SaintCarellClean_PERSONAL_USE_ONLY.otf);
   font-family: hatolie;
   src: url(Hatolie.ttf);
   font-family: bruxadesenho;
   src: url(Witcha.otf);
 }
+@font-face {
+  font-family: riolanik;
+  src: url(Riolanik.otf);
+}
 
 #botaoMenu {
-  background: black;
+  background: transparent;
+  font-size: large;
+  cursor: pointer;
+  border: none;
+}
+
+
+#spanbv {
+  color: #FFFFF3;
+  font-family: hatolie;
+  font-size: 200%;
+}
+
+/* SIZE NAV */
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 
 /* Responsividade */
@@ -34,35 +57,49 @@ body {
   background-size: cover;
 }
 
+/* Titulo e textos*/
+.h1titulo {
+  font-family: hatolie;
+  color: #FFFFF3;
+  font-size: 100px;
+  position:relative;
+  text-align: center;
+}
+h1 {
+  font-family: hatolie;
+  font-size: 55px;
+  color: #FFFFF3;
+  justify-content: center;
+}
+p{
+  font-family: riolanik;
+  font-size: 30px;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+}
+
 /* The side navigation menu */
 .sidenav {
   height: 100%;
-  /* 100% Full-height */
   width: 0;
-  /* 0 width - change this with JavaScript */
   position: fixed;
-  /* Stay in place */
   z-index: 1;
-  /* Stay on top */
   top: 0;
-  /* Stay at the top */
   left: 0;
-  background-color: rgba(0, 0, 0, 0.9);
-  /* Black*/
+  background-color: #AF876F;
   overflow-x: hidden;
-  /* Disable horizontal scroll */
   padding-top: 60px;
-  /* Place content 60px from the top */
   transition: 0.5s;
-  /* 0.5 second transition effect to slide in the sidenav */
 }
 
 /* The navigation menu links */
 .sidenav a {
+  font-family: hatolie;
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #FFFFF3;
   display: block;
   transition: 0.3s;
 }
@@ -87,94 +124,7 @@ body {
   padding: 20px;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
 
-  .sidenav a {
-    font-size: 18px;
-  }
-}
-
-/* Personalização nav 
-nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1000;
-}
-
-nav img {
-  width: 20px;
-  height: 20px;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-nav ul li {
-  list-style: none;
-  margin: 0 20px;
-  transition: 0.5s;
-}
-
-nav ul li a {
-  color: #f4f6f8;
-  font-family: narnia;
-  display: flex;
-  margin: 0;
-  padding: 10px;
-  justify-content: center;
-  font-size: 18px;
-  text-decoration: none;
-  font-family: narnia;
-  text-transform: uppercase;
-  transition: 0.5s;
-}
-
-nav ul:hover li a {
-  transform: scale(2);
-  opacity: 0.2;
-  filter: blur(5px);
-}
-
-nav ul li a:hover {
-  transform: scale(2);
-  opacity: 1;
-  filter: blur(0);
-}
-
-nav ul li a:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(343deg, rgb(8, 126, 87) 0%, rgb(21, 141, 157) 62%);
-  border: none;
-  border-radius: 15px;
-  transition: transform 0.5s;
-  transform-origin: right;
-  transform: scaleX(0);
-  z-index: -1;
-}
-
-nav ul li a:hover:before {
-  transition: transform 0.5s;
-  transform-origin: right;
-  transform: scaleX(1);
-}
 
 /* Estiliza*/
 .inspiracao {
@@ -426,3 +376,85 @@ b {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+
+/* Estilização login/cadastro
+#cadastro{
+	width: 350px;
+	height: 500px;
+	background: #AF876F;
+	overflow: hidden;
+	border-radius: 10px;
+	box-shadow: 5px 20px 50px #000;
+}
+#chk{
+	display: none;
+}
+.signup{
+	position: relative;
+	width:100%;
+	height: 100%;
+}
+label{
+	color: #fff;
+	font-size: 2.3em;
+	justify-content: center;
+	display: flex;
+	margin: 50px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: .5s ease-in-out;
+}
+input{
+	width: 60%;
+	height: 10px;
+	background: #e0dede;
+	justify-content: center;
+	display: flex;
+	margin: 20px auto;
+	padding: 12px;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+}
+button{
+	width: 60%;
+	height: 40px;
+	margin: 10px auto;
+	justify-content: center;
+	display: block;
+	color: #fff;
+	background: #AF876F;
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 30px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: .2s ease-in;
+	cursor: pointer;
+}
+button:hover{
+	background: #FFFFF3;
+}
+.login{
+	height: 460px;
+	background: #FFFFF3;
+	border-radius: 60% / 10%;
+	transform: translateY(-180px);
+	transition: .8s ease-in-out;
+}
+.login label{
+	color: #AF876F;
+	transform: scale(.6);
+}
+
+#chk:checked ~ .login{
+	transform: translateY(-500px);
+}
+#chk:checked ~ .login label{
+	transform: scale(1);	
+}
+#chk:checked ~ .signup label{
+	transform: scale(.6);
+}
+ */
