--- a/style.css
+++ b/style.css
@@ -210,6 +210,16 @@ b {
   /* Permite que as seções quebrem para a próxima linha se necessário */
 }
 
+#login {
+  display: flex;
+  justify-content: center;
+  /* Alinha os itens horizontalmente no centro */
+  align-items: center;
+  /* Alinha os itens verticalmente no centro */
+  flex-wrap: wrap;
+  /* Permite que as seções quebrem para a próxima linha se necessário */
+}
+
 .inspiracao {
   text-align: center;
   /* Centraliza o conteúdo dentro de cada seção */
@@ -459,3 +469,96 @@ button:hover{
 	transform: scale(.6);
 }
  */
+
+
+.mainL {
+  width: 350px;
+  height: 500px;
+  background: red;
+  overflow: hidden;
+  border-radius: 10px;
+  background: linear-gradient(to bottom, #3b2e24, #7d684f, #c09e79);
+}
+
+
+
+#chk {
+  display: none;
+}
+
+.signup {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+label {
+  color: #fff;
+  font-size: 2.3em;
+  justify-content: center;
+  display: flex;
+  margin: 50px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: .5s ease-in-out;
+}
+
+input {
+  width: 60%;
+  height: 10px;
+  background: #e0dede;
+  justify-content: center;
+  display: flex;
+  margin: 20px auto;
+  padding: 12px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+form>button {
+  width: 60%;
+  height: 40px;
+  margin: 10px auto;
+  justify-content: center;
+  display: block;
+  color: #fff;
+  background: #AF876F;
+  font-size: 1em;
+  font-weight: bold;
+  margin-top: 30px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  transition: .2s ease-in;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #d9a98b;
+}
+
+.login {
+  height: 460px;
+  background: #eee;
+  border-radius: 60% / 10%;
+  transform: translateY(-180px);
+  transition: .8s ease-in-out;
+}
+
+.login label {
+  color: #AF876F;
+  transform: scale(.6);
+}
+
+#chk:checked~.login {
+  transform: translateY(-500px);
+}
+
+#chk:checked~.login label {
+  transform: scale(1);
+}
+
+#chk:checked~.signup label {
+  transform: scale(.6);
+}
