--- a/style.css
+++ b/style.css
@@ -84,6 +84,22 @@ p {
   display: flex;
 }
 
+.pinspiracao {
+  font-family: riolanik;
+  font-size: 17px;
+  text-align: center;
+  justify-content: center;
+  display: flex; 
+}
+
+.h2ispiracao {
+  font-family: hatolie;
+  font-size: 35px;
+  text-align: center;
+  justify-content: center;
+  display: flex; 
+}
+
 /* The side navigation menu */
 .sidenav {
   height: 100%;
@@ -166,25 +182,6 @@ p {
 
 .inspiracao:hover .inspiracao-info {
   transform: translateY(0);
-}
-
-/*Roda pé*/
-footer {
-  background-color: #AF876F;
-  text-align: center;
-  height: 50px;
-  margin: -8px;
-  bottom: 0px;
-
-}
-
-b {
-  font-family: bruxadesenho;
-  font-size: 35px;
-}
-
-#p_rodape {
-  background-color: #FFFFF3;
 }
 
 .vejamais {
@@ -388,98 +385,18 @@ b {
   background-color: rgb(249, 249, 249, 0.4);
   border: 1px solid #ccc;
   border-radius: 5px;
-}
 
-/* Estilização login/cadastro
-#cadastro{
-	width: 350px;
-	height: 500px;
-	background: #AF876F;
-	overflow: hidden;
-	border-radius: 10px;
-	box-shadow: 5px 20px 50px #000;
 }
-#chk{
-	display: none;
-}
-.signup{
-	position: relative;
-	width:100%;
-	height: 100%;
-}
-label{
-	color: #fff;
-	font-size: 2.3em;
-	justify-content: center;
-	display: flex;
-	margin: 50px;
-	font-weight: bold;
-	cursor: pointer;
-	transition: .5s ease-in-out;
-}
-input{
-	width: 60%;
-	height: 10px;
-	background: #e0dede;
-	justify-content: center;
-	display: flex;
-	margin: 20px auto;
-	padding: 12px;
-	border: none;
-	outline: none;
-	border-radius: 5px;
-}
-button{
-	width: 60%;
-	height: 40px;
-	margin: 10px auto;
-	justify-content: center;
-	display: block;
-	color: #fff;
-	background: #AF876F;
-	font-size: 1em;
-	font-weight: bold;
-	margin-top: 30px;
-	outline: none;
-	border: none;
-	border-radius: 5px;
-	transition: .2s ease-in;
-	cursor: pointer;
-}
-button:hover{
-	background: #FFFFF3;
-}
-.login{
-	height: 460px;
-	background: #FFFFF3;
-	border-radius: 60% / 10%;
-	transform: translateY(-180px);
-	transition: .8s ease-in-out;
-}
-.login label{
-	color: #AF876F;
-	transform: scale(.6);
-}
-
-#chk:checked ~ .login{
-	transform: translateY(-500px);
-}
-#chk:checked ~ .login label{
-	transform: scale(1);	
-}
-#chk:checked ~ .signup label{
-	transform: scale(.6);
-}
- */
 
 
 .mainL {
   width: 350px;
   height: 500px;
-  background: red;
+  background: #FFFFF3;
   overflow: hidden;
   border-radius: 10px;
-  background: linear-gradient(to bottom, #3b2e24, #7d684f, #c09e79);
+  background: linear-gradient(to bottom, #c09e79, #7d684f, #c09e79);
+  font-family: hatolie;
 }
 
 
@@ -492,6 +409,7 @@ button:hover{
   position: relative;
   width: 100%;
   height: 100%;
+  
 }
 
 label {
@@ -564,3 +482,28 @@ button:hover {
 #chk:checked~.signup label {
   transform: scale(.6);
 }
+
+/*Roda pé*/
+footer {
+  background-color: #AF876F;
+  text-align: center;
+  height: 47px;
+  display:block;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+.p_rodape{
+  font-size: 20px;
+}
+#p_rodape {
+  background-color: #FFFFF3;
+}
+
+b {
+  font-family: bruxadesenho;
+  font-size: 30px;
+}
+
+
+
